# OpenLH

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  win32-build-fixlist.txt
client/: logo.h  main.cpp
client-test/: main.cpp
server/: Core.cpp  Core.h  main.cpp  stdinc.h
server/Game/: Base.cpp  Entity.h  Handler.h  Manager.cpp  Manager.h  Player.h  Vehicle.h
server/Network/: Client.cpp  Client.h  Handler.h  Manager.cpp  Manager.h
server/Network/Handler/: Base.cpp  Connection.cpp
shared/: BuildVersion.h  LinearMath.h  MessageID.h  Utils.h
